# lp-to-jira

./: .gitignore  MAINTAINERS  README.md  conftest.py  lp-jira-sync  lp-to-jira  lp-to-jira-report  lp-to-jira.py  sample.json  setup.cfg  setup.py
LpToJira/: jira_api.py  lp_bug.py  lp_to_jira.py  lp_to_jira_report.py  lp_to_jira_sync.py
snap/: snapcraft.yaml
tests/: conftest.py  test_lp_bug.py  test_lp_to_jira.py  test_lp_to_jira_report.py
