[metadata]
name = LpToJira
version = 0.7
description = A Command Line helper to import launchpad bug in JIRA.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/canonical/lp-to-jira
project_urls =
    Bug Reports = https://github.com/canonical/lp-to-jira/issues
    Source Code = https://github.com/mclemenceau/lp-to-jira
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    launchpadlib
    jira>=3.10.5

[options.extras_require]
test =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    lp-to-jira = LpToJira.lp_to_jira:main
    lp-to-jira-report = LpToJira.lp_to_jira_report:main

[tool:pytest]
addopts = --cov
testpaths = tests

[coverage:run]
source = LpToJira
branch = true

[coverage:report]
show_missing = true
exclude_lines =
    raise NotImplementedError
    assert False
